Fri Jun 22 20:44:44 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>

        * dds/DCPS/DomainParticipantImpl.h:

          Removed unneeded typedefs.

Fri Jun 22 20:21:59 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * README:

          Clarified discussion of the InstanceHandles when BIT is disabled,
          based on email from Scott Harris.

Fri Jun 22 19:40:29 UTC 2007  Adam Mitz  <mitza@ociweb.com>

        * DevGuideExamples/DDS/Messenger/run_corbaloc_test.pl:
        * DevGuideExamples/DDS/Messenger/run_ns_test.pl:
        * DevGuideExamples/DDS/Messenger/run_test.pl:
        * performance-tests/DCPS/InfoRepo_population/run_test.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-1p1s.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-1p4s.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-2p3s.pl:
        * performance-tests/DCPS/TCPListenerTest/run_test-4p1s.pl:
        * tests/DCPS/CorbaSeq/run_test.pl:
        * tests/DCPS/DcpsIntegration/run_test-integration.pl:
        * tests/DCPS/DcpsIntegration/run_test-topic.pl:
        * tests/DCPS/FooTest3_0/run_test.pl:
        * tests/DCPS/FooTest3_1/run_test.pl:
        * tests/DCPS/FooTest3_1/run_test_nokey.pl:
        * tests/DCPS/FooTest3_2/pub_main.cpp:
        * tests/DCPS/FooTest3_2/run_test.pl:
        * tests/DCPS/FooTest3_2/sub_main.cpp:
        * tests/DCPS/FooTest4/run_test.pl:
        * tests/DCPS/FooTest4_0/run_test.pl:
        * tests/DCPS/FooTest5/run_test.pl:
        * tests/DCPS/LivelinessTest/run_test.pl:
        * tests/DCPS/MultiDPTest/run_test.pl:
        * tests/DCPS/Prst_delayed_subscriber/run_test.pl:
        * tests/DCPS/Reconnect/run_test.pl:
        * tests/DCPS/TransientLocalTest/run_test.pl:
        * tests/DCPS/ZeroCopyRead/ZeroCopyRead.mpc:
        * tests/DCPS/ZeroCopyRead/main.cpp:
        * tests/DCPS/ZeroCopyRead/run_test.pl:
        * tests/DCPS/sub_init_loop/run_test.pl:
        * tests/DCPS/unit/run_test.pl: