@@ -1,3 +1,9 @@
+Mon Jun 25 15:47:59 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>
+
+        * DevGuideExamples/DDS/Messenger/run_test.pl:
+
+          Fixing spacing error that prevented tests from running.
+
 Fri Jun 22 20:44:44 UTC 2007  Jonathan S. Pollack  <pollack_j@ociweb.com>
 
         * dds/DCPS/DomainParticipantImpl.h:
